tests/baselines/reference/importTag10.errors.txt
//// [tests/cases/conformance/jsdoc/importTag10.ts] ////

/foo.js(2,11): error TS1109: Expression expected.


==== /foo.js (1 errors) ====
    /**
     * @import
              
     */
    
!!! error TS1109: Expression expected.
    